--- a/SmartGel/storyboard/Main_iPhone.storyboard
+++ b/SmartGel/storyboard/Main_iPhone.storyboard
@@ -497,41 +497,46 @@
                                     <constraint firstItem="9Zv-Iq-vMj" firstAttribute="centerX" secondItem="0fD-uU-AHP" secondAttribute="centerX" id="xka-k8-igF"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b2m-nP-ZNq">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b2m-nP-ZNq" customClass="SGCleanEditView">
                                 <rect key="frame" x="10" y="40" width="300" height="553"/>
                                 <subviews>
-                                    <imageView autoresizesSubviews="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0ne-iK-goy">
-                                        <rect key="frame" x="0.0" y="0.0" width="300" height="553"/>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                    </imageView>
-                                    <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="RpD-T1-dX4">
+                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PLq-hc-5xh">
                                         <rect key="frame" x="0.0" y="0.0" width="300" height="553"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please take a photo to estimate clean state" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f3Q-ZR-bNC">
-                                                <rect key="frame" x="35" y="268.5" width="230" height="16.5"/>
-                                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="12"/>
-                                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image001.png" translatesAutoresizingMaskIntoConstraints="NO" id="6Ye-bv-LBC">
+                                                <rect key="frame" x="0.0" y="0.0" width="300" height="553"/>
+                                            </imageView>
                                         </subviews>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstItem="f3Q-ZR-bNC" firstAttribute="centerY" secondItem="RpD-T1-dX4" secondAttribute="centerY" id="7oq-07-sW8"/>
-                                            <constraint firstItem="f3Q-ZR-bNC" firstAttribute="centerX" secondItem="RpD-T1-dX4" secondAttribute="centerX" id="xsp-TO-hE8"/>
+                                            <constraint firstItem="6Ye-bv-LBC" firstAttribute="top" secondItem="PLq-hc-5xh" secondAttribute="top" id="0ep-kP-8Sq"/>
+                                            <constraint firstItem="6Ye-bv-LBC" firstAttribute="centerY" secondItem="PLq-hc-5xh" secondAttribute="centerY" id="7nW-QW-8TE"/>
+                                            <constraint firstAttribute="trailing" secondItem="6Ye-bv-LBC" secondAttribute="trailing" id="aAS-hJ-m8m"/>
+                                            <constraint firstAttribute="bottom" secondItem="6Ye-bv-LBC" secondAttribute="bottom" id="bNc-lU-naH"/>
+                                            <constraint firstItem="6Ye-bv-LBC" firstAttribute="centerX" secondItem="PLq-hc-5xh" secondAttribute="centerX" id="cR9-ld-2zr"/>
+                                            <constraint firstItem="6Ye-bv-LBC" firstAttribute="leading" secondItem="PLq-hc-5xh" secondAttribute="leading" id="e6b-dl-it5"/>
                                         </constraints>
+                                    </scrollView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="orh-Kl-AX1">
+                                        <rect key="frame" x="0.0" y="0.0" width="300" height="553"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </view>
                                 </subviews>
                                 <color key="backgroundColor" red="0.14901960784313725" green="0.1764705882352941" blue="0.21176470588235294" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstItem="0ne-iK-goy" firstAttribute="leading" secondItem="b2m-nP-ZNq" secondAttribute="leading" id="3sv-e0-t7a"/>
-                                    <constraint firstItem="RpD-T1-dX4" firstAttribute="leading" secondItem="b2m-nP-ZNq" secondAttribute="leading" id="Bdk-gO-hTA"/>
-                                    <constraint firstItem="0ne-iK-goy" firstAttribute="top" secondItem="b2m-nP-ZNq" secondAttribute="top" id="H3h-fx-nSM"/>
-                                    <constraint firstAttribute="trailing" secondItem="0ne-iK-goy" secondAttribute="trailing" id="HPp-GR-XdA"/>
-                                    <constraint firstItem="RpD-T1-dX4" firstAttribute="top" secondItem="b2m-nP-ZNq" secondAttribute="top" id="M5y-FD-YZf"/>
-                                    <constraint firstAttribute="bottom" secondItem="RpD-T1-dX4" secondAttribute="bottom" id="UiK-Db-6HT"/>
-                                    <constraint firstAttribute="bottom" secondItem="0ne-iK-goy" secondAttribute="bottom" id="lxB-Bl-qWi"/>
-                                    <constraint firstAttribute="trailing" secondItem="RpD-T1-dX4" secondAttribute="trailing" id="yhF-lV-4Ew"/>
+                                    <constraint firstItem="PLq-hc-5xh" firstAttribute="leading" secondItem="b2m-nP-ZNq" secondAttribute="leading" id="5Dh-lp-kTa"/>
+                                    <constraint firstItem="orh-Kl-AX1" firstAttribute="top" secondItem="b2m-nP-ZNq" secondAttribute="top" id="Hdj-SC-nmg"/>
+                                    <constraint firstItem="PLq-hc-5xh" firstAttribute="top" secondItem="b2m-nP-ZNq" secondAttribute="top" id="S1q-LJ-eAg"/>
+                                    <constraint firstAttribute="trailing" secondItem="PLq-hc-5xh" secondAttribute="trailing" id="TPK-jB-wL4"/>
+                                    <constraint firstAttribute="bottom" secondItem="orh-Kl-AX1" secondAttribute="bottom" id="iEW-Fq-XEG"/>
+                                    <constraint firstItem="orh-Kl-AX1" firstAttribute="leading" secondItem="b2m-nP-ZNq" secondAttribute="leading" id="rsA-KL-m2x"/>
+                                    <constraint firstAttribute="trailing" secondItem="orh-Kl-AX1" secondAttribute="trailing" id="vE6-wT-Jk1"/>
+                                    <constraint firstAttribute="bottom" secondItem="PLq-hc-5xh" secondAttribute="bottom" id="zXg-xb-DFH"/>
                                 </constraints>
+                                <connections>
+                                    <outlet property="gridContentView" destination="orh-Kl-AX1" id="GTs-jd-C2H"/>
+                                    <outlet property="imgview" destination="6Ye-bv-LBC" id="0ka-NH-Akp"/>
+                                    <outlet property="scrollView" destination="PLq-hc-5xh" id="wmE-Kc-ZdM"/>
+                                </connections>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A8I-5h-BTo">
                                 <rect key="frame" x="10" y="10" width="188" height="25"/>
@@ -603,18 +608,15 @@
                     <connections>
                         <outlet property="addManualAreaButton" destination="qEN-8w-bmG" id="Div-c8-rdj"/>
                         <outlet property="addManualAreaLabel" destination="gmB-Eq-JWO" id="doq-MG-Jf0"/>
+                        <outlet property="cleanEditView" destination="b2m-nP-ZNq" id="rD1-eN-EcP"/>
                         <outlet property="dateLabel" destination="7wL-2c-Txc" id="k1G-Q3-0rM"/>
                         <outlet property="dirtyvalueLabel" destination="854-Yh-x7d" id="aeP-2f-e6J"/>
-                        <outlet property="gridContentView" destination="RpD-T1-dX4" id="PRa-Ol-GqV"/>
-                        <outlet property="imageareaView" destination="b2m-nP-ZNq" id="x5c-Hx-J9V"/>
                         <outlet property="locationLabel" destination="A8I-5h-BTo" id="HbW-vt-Zur"/>
-                        <outlet property="notificationLabel" destination="f3Q-ZR-bNC" id="2E4-RF-hLG"/>
                         <outlet property="showCleanAreaButton" destination="MGE-Nh-JIh" id="4M0-eF-22p"/>
                         <outlet property="showCleanAreaLabel" destination="uAM-pf-dng" id="bO9-dj-LPC"/>
                         <outlet property="tagImageView" destination="bhD-7U-EzC" id="7A5-Dj-U8L"/>
                         <outlet property="tagLabel" destination="jnk-gN-FLo" id="Ucw-3U-QWQ"/>
                         <outlet property="takePhotoButton" destination="M1e-FX-kfH" id="vSb-kn-hAj"/>
-                        <outlet property="takenImageView" destination="0ne-iK-goy" id="c2M-wW-8I1"/>
                         <outlet property="valueLabel" destination="XlK-fN-2iW" id="ziB-1A-6fv"/>
                     </connections>
                 </viewController>
@@ -2083,6 +2085,7 @@
         <image name="ic_menu" width="19" height="20"/>
         <image name="ic_sort" width="25" height="25"/>
         <image name="ic_take_photo" width="35" height="30"/>
+        <image name="image001.png" width="1632" height="1224"/>
         <image name="logo" width="150" height="150"/>
         <image name="tm_smart_gel.png" width="310" height="233"/>
     </resources>
