updated layout for ipad for zooming

--- a/SmartGel/storyboard/Main.storyboard
+++ b/SmartGel/storyboard/Main.storyboard
@@ -373,7 +373,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Show clean area" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uAM-pf-dng">
-                                        <rect key="frame" x="4.5" y="745" width="92.5" height="14.5"/>
+                                        <rect key="frame" x="4.5" y="843" width="92.5" height="14.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
@@ -388,16 +388,6 @@
                                         <rect key="frame" x="8" y="925.5" width="85" height="14.5"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="85" id="Qrs-qb-qOp"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add Clean Area" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sFX-kU-3nE">
-                                        <rect key="frame" x="7.5" y="827.5" width="85" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="85" id="Xgm-16-n08"/>
-                                            <constraint firstAttribute="height" constant="30" id="oAk-ZR-LTz"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
@@ -421,7 +411,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MGE-Nh-JIh">
-                                        <rect key="frame" x="30.5" y="697" width="40" height="40"/>
+                                        <rect key="frame" x="30.5" y="795" width="40" height="40"/>
                                         <color key="backgroundColor" red="0.75294117650000003" green="0.26274509800000001" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="40" id="Vwu-mf-yNZ"/>
@@ -441,40 +431,21 @@
                                             <action selector="showHideCleanArea" destination="BYZ-38-t0r" eventType="touchUpInside" id="3O6-Az-z0E"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QKj-h6-ZWW">
-                                        <rect key="frame" x="30" y="779.5" width="40" height="40"/>
-                                        <color key="backgroundColor" red="0.75294117650000003" green="0.26274509800000001" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="40" id="GKX-ag-7LI"/>
-                                            <constraint firstAttribute="width" constant="40" id="fQG-Zv-3eB"/>
-                                        </constraints>
-                                        <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
-                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                                <integer key="value" value="20"/>
-                                            </userDefinedRuntimeAttribute>
-                                        </userDefinedRuntimeAttributes>
-                                        <connections>
-                                            <action selector="addManualAreaButtonTapped" destination="BYZ-38-t0r" eventType="touchUpInside" id="tT6-zB-tfU"/>
-                                        </connections>
-                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.14901960784313725" green="0.1764705882352941" blue="0.21176470588235294" alpha="0.0" colorSpace="calibratedRGB"/>
                                 <constraints>
+                                    <constraint firstItem="9Zv-Iq-vMj" firstAttribute="top" secondItem="uAM-pf-dng" secondAttribute="bottom" constant="20" id="0Lq-vM-0md"/>
                                     <constraint firstItem="gDd-A5-Ob0" firstAttribute="top" secondItem="M1e-FX-kfH" secondAttribute="bottom" constant="10" id="15A-Ch-YTY"/>
                                     <constraint firstItem="XlK-fN-2iW" firstAttribute="top" secondItem="FWX-hx-Z4y" secondAttribute="bottom" constant="3" id="3oE-Ql-DZ9"/>
                                     <constraint firstItem="M1e-FX-kfH" firstAttribute="centerY" secondItem="0fD-uU-AHP" secondAttribute="centerY" id="4yA-vk-dMd"/>
                                     <constraint firstItem="uAM-pf-dng" firstAttribute="centerX" secondItem="0fD-uU-AHP" secondAttribute="centerX" id="6q9-Qc-mOe"/>
                                     <constraint firstItem="JpM-gS-PVb" firstAttribute="top" secondItem="854-Yh-x7d" secondAttribute="bottom" constant="16" id="Eco-EU-TId"/>
-                                    <constraint firstItem="9Zv-Iq-vMj" firstAttribute="top" secondItem="sFX-kU-3nE" secondAttribute="bottom" constant="20" id="Fe3-I2-Gj9"/>
                                     <constraint firstItem="MGE-Nh-JIh" firstAttribute="centerX" secondItem="0fD-uU-AHP" secondAttribute="centerX" id="MPA-bc-EW0"/>
                                     <constraint firstItem="JpM-gS-PVb" firstAttribute="centerX" secondItem="0fD-uU-AHP" secondAttribute="centerX" id="Mr1-iK-0TF"/>
                                     <constraint firstItem="swC-qe-Hh8" firstAttribute="centerX" secondItem="0fD-uU-AHP" secondAttribute="centerX" id="NAN-XF-V8y"/>
-                                    <constraint firstItem="sFX-kU-3nE" firstAttribute="centerX" secondItem="0fD-uU-AHP" secondAttribute="centerX" id="ZOa-Hf-jWX"/>
                                     <constraint firstItem="FWX-hx-Z4y" firstAttribute="centerX" secondItem="0fD-uU-AHP" secondAttribute="centerX" id="buS-BJ-zaF"/>
                                     <constraint firstItem="uAM-pf-dng" firstAttribute="top" secondItem="MGE-Nh-JIh" secondAttribute="bottom" constant="8" id="cV5-Ys-Wdm"/>
                                     <constraint firstAttribute="width" constant="100" id="d13-TL-hie"/>
-                                    <constraint firstItem="QKj-h6-ZWW" firstAttribute="centerX" secondItem="0fD-uU-AHP" secondAttribute="centerX" id="dSc-PN-okg"/>
                                     <constraint firstItem="Jqo-9O-KWa" firstAttribute="top" secondItem="JpM-gS-PVb" secondAttribute="bottom" constant="8" id="daj-Pd-nVX"/>
                                     <constraint firstItem="o0Y-WL-Twu" firstAttribute="centerX" secondItem="0fD-uU-AHP" secondAttribute="centerX" id="ebP-BQ-Jb7"/>
                                     <constraint firstItem="9Zv-Iq-vMj" firstAttribute="centerX" secondItem="0fD-uU-AHP" secondAttribute="centerX" id="klT-0H-B41"/>
@@ -487,29 +458,18 @@
                                     <constraint firstItem="854-Yh-x7d" firstAttribute="top" secondItem="swC-qe-Hh8" secondAttribute="bottom" constant="3" id="sLN-Oo-bCq"/>
                                     <constraint firstItem="FWX-hx-Z4y" firstAttribute="top" secondItem="0fD-uU-AHP" secondAttribute="top" constant="60" id="t6S-VL-d0j"/>
                                     <constraint firstItem="XlK-fN-2iW" firstAttribute="centerX" secondItem="0fD-uU-AHP" secondAttribute="centerX" id="uWi-9U-M28"/>
-                                    <constraint firstItem="QKj-h6-ZWW" firstAttribute="top" secondItem="uAM-pf-dng" secondAttribute="bottom" constant="20" id="uiv-2q-7L9"/>
                                     <constraint firstItem="M1e-FX-kfH" firstAttribute="centerX" secondItem="0fD-uU-AHP" secondAttribute="centerX" id="xYC-LS-G5A"/>
-                                    <constraint firstItem="sFX-kU-3nE" firstAttribute="top" secondItem="QKj-h6-ZWW" secondAttribute="bottom" constant="8" id="xlm-Bt-8OJ"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b2m-nP-ZNq" customClass="SGCleanEditView">
                                 <rect key="frame" x="20" y="60" width="648" height="880"/>
                                 <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2zz-Nv-ixp">
+                                        <rect key="frame" x="0.0" y="0.0" width="648" height="880"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    </view>
                                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wta-Wy-47G">
                                         <rect key="frame" x="0.0" y="0.0" width="648" height="880"/>
-                                        <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ugK-uS-kWi">
-                                                <rect key="frame" x="0.0" y="0.0" width="648" height="880"/>
-                                            </imageView>
-                                        </subviews>
-                                        <constraints>
-                                            <constraint firstItem="ugK-uS-kWi" firstAttribute="centerX" secondItem="wta-Wy-47G" secondAttribute="centerX" id="C5I-Z1-7dL"/>
-                                            <constraint firstItem="ugK-uS-kWi" firstAttribute="top" secondItem="wta-Wy-47G" secondAttribute="top" id="VSP-vI-1Y8"/>
-                                            <constraint firstItem="ugK-uS-kWi" firstAttribute="centerY" secondItem="wta-Wy-47G" secondAttribute="centerY" id="ccd-Dw-k5H"/>
-                                            <constraint firstItem="ugK-uS-kWi" firstAttribute="leading" secondItem="wta-Wy-47G" secondAttribute="leading" id="eXF-Nb-ZcP"/>
-                                            <constraint firstAttribute="bottom" secondItem="ugK-uS-kWi" secondAttribute="bottom" id="hjP-cf-NNw"/>
-                                            <constraint firstAttribute="trailing" secondItem="ugK-uS-kWi" secondAttribute="trailing" id="hsk-Ij-i97"/>
-                                        </constraints>
                                     </scrollView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please take a photo to estimate clean state" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f3Q-ZR-bNC">
                                         <rect key="frame" x="170.5" y="429" width="307" height="22"/>
@@ -520,15 +480,23 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.14901960784313725" green="0.1764705882352941" blue="0.21176470588235294" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
+                                    <constraint firstItem="wta-Wy-47G" firstAttribute="leading" secondItem="b2m-nP-ZNq" secondAttribute="leading" id="1uA-BV-qT5"/>
                                     <constraint firstItem="wta-Wy-47G" firstAttribute="top" secondItem="b2m-nP-ZNq" secondAttribute="top" id="2Tj-pv-CPU"/>
+                                    <constraint firstItem="2zz-Nv-ixp" firstAttribute="top" secondItem="b2m-nP-ZNq" secondAttribute="top" id="3sf-fo-u5J"/>
                                     <constraint firstAttribute="bottom" secondItem="wta-Wy-47G" secondAttribute="bottom" id="4Jk-hg-ZHc"/>
                                     <constraint firstItem="f3Q-ZR-bNC" firstAttribute="centerX" secondItem="b2m-nP-ZNq" secondAttribute="centerX" id="AQF-8W-Psb"/>
+                                    <constraint firstItem="wta-Wy-47G" firstAttribute="top" secondItem="b2m-nP-ZNq" secondAttribute="top" id="Dr9-KT-x1v"/>
+                                    <constraint firstAttribute="trailing" secondItem="wta-Wy-47G" secondAttribute="trailing" id="JBG-gE-iE5"/>
+                                    <constraint firstItem="2zz-Nv-ixp" firstAttribute="leading" secondItem="b2m-nP-ZNq" secondAttribute="leading" id="R90-NZ-9MX"/>
                                     <constraint firstItem="f3Q-ZR-bNC" firstAttribute="centerY" secondItem="b2m-nP-ZNq" secondAttribute="centerY" id="SS2-Nh-jg5"/>
+                                    <constraint firstAttribute="bottom" secondItem="wta-Wy-47G" secondAttribute="bottom" id="UW4-8A-SAb"/>
                                     <constraint firstItem="wta-Wy-47G" firstAttribute="leading" secondItem="b2m-nP-ZNq" secondAttribute="leading" id="Wui-MX-XXp"/>
+                                    <constraint firstAttribute="bottom" secondItem="2zz-Nv-ixp" secondAttribute="bottom" id="Z2N-jJ-4fR"/>
+                                    <constraint firstAttribute="trailing" secondItem="2zz-Nv-ixp" secondAttribute="trailing" id="g2z-ZZ-Nbc"/>
                                     <constraint firstAttribute="trailing" secondItem="wta-Wy-47G" secondAttribute="trailing" id="r5n-1d-4Rg"/>
                                 </constraints>
                                 <connections>
-                                    <outlet property="imgview" destination="ugK-uS-kWi" id="ckb-ui-GVy"/>
+                                    <outlet property="gridContentView" destination="2zz-Nv-ixp" id="AGA-Hv-S0R"/>
                                     <outlet property="scrollView" destination="wta-Wy-47G" id="xdX-cf-uW2"/>
                                 </connections>
                             </view>
@@ -600,8 +568,6 @@
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                     <connections>
-                        <outlet property="addManualAreaButton" destination="QKj-h6-ZWW" id="cPu-It-Wgh"/>
-                        <outlet property="addManualAreaLabel" destination="sFX-kU-3nE" id="5Hk-2j-eP0"/>
                         <outlet property="cleanEditView" destination="b2m-nP-ZNq" id="F1z-3U-q9O"/>
                         <outlet property="dateLabel" destination="7wL-2c-Txc" id="k1G-Q3-0rM"/>
                         <outlet property="dirtyvalueLabel" destination="854-Yh-x7d" id="aeP-2f-e6J"/>
